test/cli/scenarios_to_cli/other/scenario_validate_volume_whitelist/kyverno-test.yaml
name: validate-volumes-whitelist
policies:
- policy.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: validate-volumes-whitelist
  resources:
  - test-volumes
  result: pass
  rule: validate-volumes-whitelist
