test/cli/scenarios_to_cli/other/scenario_validate_volume_whitelist/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-volumes
spec:
  containers:
  - name: container-with-configmap
    image: busybox
    volumeMounts:
      - name: cache-vol
        mountPath: /cache
  volumes:
  - name: cache-vol
    configMap:
      name: log-config
      items:
      - key: log_level
        path: log_level
